# paradigmas_prog

./: README.md  stack.yaml
.stack-work/install/66f269a2/flag-cache/: QuickCheck-2.10.1-ITccuGmxcAJ3LqZnJvZ2nQ  primitive-0.6.4.0-kK2x3tDWKdAgEjt22m9eJ  quickcheck-0.1.0.0  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  tf-random-0.5-30MNqkCI2qn7J9CAyOxruT
Atividade2/: Main.hs
Atividade3/: atividade3.hs
Atividade4/: Atividade4.hs  link_github.txt
Atividade6/: Atividade6.cabal
Atividade6/src/: Main.hs
Atividade7/: Atividade7.cabal  README.md
Atividade7/.stack-work/install/620260b6/flag-cache/: Atividade7-0.1.0.0
Atividade7/src/: Main.hs
Atividade8/: Atividade8.cabal  README.md
Atividade8/.stack-work/install/246e2677/flag-cache/: Atividade8-0.1.0.0
Atividade8/src/: Main.hs
Listas/Lista2/: Ex1.hs
Listas/Lista3/: Lista3.hs
Projeto-Final/: Projeto-Final.cabal
Projeto-Final/.stack-work/install/620260b6/flag-cache/: Projeto-Final-0.1.0.0
Projeto-Final/src/: Main.hs
atividade5/: README.md  atividade5.cabal
atividade5/.stack-work/install/bf6b262a/flag-cache/: atividade5-0.1.0.0
atividade5/src/: Main.hs  Test.hs  Votos.hs
cifracesar/: cifracesar.cabal
cifracesar/src/: Cesar.hs  Main.hs  Test.hs
factcheck/: factcheck.cabal
factcheck/.stack-work/install/fa6a03d3/flag-cache/: aeson-1.3.1.1-1ylnOsNRqErEJUHn7bxFpe  asn1-encoding-0.9.5-9g0SgyQg06fBrHTvt82jka  asn1-parse-0.9.4-E9PLfJSQs3J4TNoRCN2RjC  (+57 more)
factcheck/src/: Main.hs
kmeans/: kmeans.cabal
kmeans/src/: KMeansPar.hs  Main.hs  teste.hs
quickcheck/: quickcheck.cabal
quickcheck/src/: Main.hs
(+11 files in other folders)
